--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "nedb": "^1.1.1"
   },
   "devDependencies": {
-    "chit": "0.x.x"
+    "chit": "0.x.x",
+    "chix-flow": "^0.12.0",
+    "chix-monitor-npmlog": "0.0.5"
   },
   "chix": {
     "name": "nedb",
